--- a/Client/package.json
+++ b/Client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.17.3",
     "axios": "^1.7.2",
+    "ethers": "^6.13.1",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
